removed readCurrentExecutionPeriod from executionPeriod dao